# ai_dev_tools_zoomcamp

./: README.md
.github/workflows/: cd.yml  ci.yml
homework/homework_1/: IMPLEMENTATION.md  QUICKSTART.md  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt
homework/homework_1/project/: settings.py  urls.py  wsgi.py
homework/homework_1/todos/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
homework/homework_1/todos/migrations/: 0001_initial.py
homework/homework_1/todos/templates/todos/: base.html  home.html  todo_confirm_delete.html  todo_form.html
homework/howework_2/: README.md
homework/howework_2/coding-platform-poc/: README.md  package-lock.json  package.json
homework/howework_2/coding-platform-poc/client/: index.html  package.json  vite.config.js
homework/howework_2/coding-platform-poc/client/src/: App.jsx  App.test.jsx
homework/howework_2/coding-platform-poc/server/: index.js  package.json  temp_1764536319170.js  temp_1764536881482.js  temp_1764537025938.js
homework/howework_2/real_time_coding_platform/: DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yaml  index.html  package-lock.json  package.json  render.yaml  tailwind.config.ts  vitest.config.ts  vitest.integration.config.ts
homework/howework_2/real_time_coding_platform/client/: package-lock.json  package.json  vite.config.js
homework/howework_2/real_time_coding_platform/server/: index.js  package-lock.json  package.json
homework/howework_2/real_time_coding_platform/src/: App.tsx  index.css
(+36 files in other folders)
